--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 html {
     font-size: 28px;
-    color: #888;
+    color: #666;
     -webkit-user-select: none;
     user-select: none;
     cursor: default;
@@ -22,6 +22,8 @@ div.bg {
     border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 10px;
     position: absolute;
+    left: 0;
+    top: 0;
 }
 
 input {
@@ -30,7 +32,7 @@ input {
 
 .main {
     position: relative;
-    left: 264px;
+    left: 278px;
 }
 
 .userinput {
@@ -42,13 +44,37 @@ input {
     font-size: 75%;
 }
 
-input {
+div.short {
+    min-width: 210px;
+    max-width: 240px;
+    text-overflow: ellipsis;
+    overflow: hidden;
     display: inline-block;
     cursor: text;
+    border-bottom: 1px solid rgba(235, 235, 235, 0.8);
+    font-size: 21px;
+    color: black;
+    transition: border-bottom .4s;
+    -webkit-transition: border-bottom .4s;
+    white-space: nowrap;
+    word-break: keep-all;
+    -webkit-user-modify: read-write-plaintext-only;
+    position: relative;
+    top: 3px;
 }
 
-input.short {
+div.short:focus, div.short:active {
+    outline: 0;
+    border-bottom: 1px solid rgb(28, 145, 255);
+}
+
+div.short#path {
+    font-family: Consolas;
+}
+
+span.pad {
     width: 210px;
+    cursor: text;
 }
 
 a.button1 {
@@ -61,8 +87,9 @@ a.button1 {
     color: #4d4d4d;
     padding: 6px 12px;
     border-radius: 3px;
-    background: white;
     font-family: Consolas;
+    transition: background .2s;
+    -webkit-transition: background .2s;
 }
 
 a.button1:hover {
@@ -184,4 +211,18 @@ a.beautifulA {
     font-size: 1em;
     padding-left: 8px;
     display: inline-block;
+}
+
+.my-logo {
+    position: absolute; 
+    left: -50px;
+    overflow: hidden;
+    zoom: 100%;
+    height: 100px;
+    bottom: -16px;
+    border: 0;
+    transition: opacity .8s;
+    -moz-transition: opacity .8s;
+    -webkit-transition: opacity .8s;
+    -o-transition: opacity .8s;
 }
