--- a/src/css/index.css
+++ b/src/css/index.css
@@ -184,8 +184,7 @@ input.pointer {
 }
 
 span.eng {
-    font-family: "Courier New";
-    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .beautiful {
