--- a/src/css/index.css
+++ b/src/css/index.css
@@ -159,7 +159,7 @@ input.pointer {
     width: 600px;
     padding-left: 4px;
     color: rgb(36, 36, 36);
-    font-family: "Microsoft YaHei";
+    font-family: "Microsoft YaHei", PingFangTC-Regular;
     cursor: default;
 }
 
